Slider looking better on IE11, still there's an issue width margins

--- a/frameworks/themes/JewelTheme/src/main/resources/defaults.css
+++ b/frameworks/themes/JewelTheme/src/main/resources/defaults.css
@@ -426,7 +426,7 @@ j|Card {
   margin: 0 20px;
   padding: 0;
   width: calc(100% - 40px);
-  height: 6px;
+  height: 36px;
   background: transparent;
   color: #3CADF1;
 }
@@ -437,10 +437,48 @@ j|Card {
   background: transparent;
   border: none;
 }
+.jewel.slider input::-ms-track {
+  width: 100%;
+  height: 6px;
+  background: none;
+  border: none;
+  color: transparent;
+}
+.jewel.slider input::-ms-fill-lower {
+  position: relative;
+  flex: 0;
+  padding: 0;
+  background: linear-gradient(#4ab3f2, #2ea7f0);
+  border: 1px solid #0f88d1;
+  box-shadow: inset 0 1px 0 #9bd5f8;
+  border-radius: 3px;
+}
+.jewel.slider input::-ms-fill-upper {
+  position: relative;
+  flex: 0;
+  padding: 0;
+  background: linear-gradient(white, #e6e6e6);
+  border: 1px solid #b3b3b3;
+  border-radius: 3px;
+}
 .jewel.slider input::-webkit-slider-thumb, .jewel.slider input::-moz-range-thumb {
   -webkit-appearance: none;
   -moz-appearance: none;
   -o-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  width: 18px;
+  height: 18px;
+  background: linear-gradient(#4ab3f2, #2ea7f0);
+  border: 1px solid #0f88d1;
+  box-shadow: inset 0 1px 0 #9bd5f8, 0 0 0 1px rgba(255, 255, 255, 0.3);
+  border-radius: 50%;
+}
+.jewel.slider input::-ms-thumb {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -o-appearance: none;
+  -ms-appearance: none;
   appearance: none;
   width: 18px;
   height: 18px;
@@ -452,18 +490,31 @@ j|Card {
 .jewel.slider input:active::-webkit-slider-thumb, .jewel.slider input:active::-moz-range-thumb {
   transform: scale(1.4);
 }
+.jewel.slider input:active::-ms-thumb {
+  transform: scale(1.4);
+}
 .jewel.slider input:focus {
   outline: none;
 }
 .jewel.slider input[disabled] {
   cursor: unset;
 }
-.jewel.slider input[disabled]::-webkit-slider-thumb, .jewel.slider input[disabled]::-moz-range-thumb {
+.jewel.slider input[disabled]::-ms-fill-lower {
+  background: #e6e6e6;
+  border: 1px solid silver;
+  box-shadow: none;
+}
+.jewel.slider input[disabled]::-ms-fill-upper {
+  background: #f3f3f3;
+  border: 1px solid #d9d9d9;
+  box-shadow: none;
+}
+.jewel.slider input[disabled]::-webkit-slider-thumb, .jewel.slider input[disabled]::-moz-range-thumb, .jewel.slider input[disabled]::-ms-thumb {
   background: #f3f3f3;
   border: 1px solid silver;
   box-shadow: none;
 }
-.jewel.slider input[disabled]:active::-webkit-slider-thumb, .jewel.slider input[disabled]:active::-moz-range-thumb {
+.jewel.slider input[disabled]:active::-webkit-slider-thumb, .jewel.slider input[disabled]:active::-moz-range-thumb, .jewel.slider input[disabled]:active::-ms-thumb {
   transform: scale(1);
 }
 .jewel.slider input[disabled] + .slider-track-container > .slider-track-fill {
